# OTX

./: .gitignore  .travis.yml  README.md  appveyor.yml
.github/workflows/: CMakeLists.txt  build.yml  main.yml  workflow_linux.yml  workflow_macos.yml  workflow_windows.yml
ci-scripts/: README.txt
ci-scripts/linux/: otx-build.sh  otx-buildffmpeg.sh  otx-buildopencv.sh  otx-buildpkg.sh  travis-buildpkg.sh
ci-scripts/osx/: otx-build.sh  otx-buildffmpeg.sh  otx-buildopencv.sh  otx-buildpkg.sh  otx-install.sh  travis-build.sh  travis-buildpkg.sh  travis-install.sh
doc/: how_to_build_bsd.md  how_to_build_linux.md  how_to_build_macosx.md  how_to_build_macosx_ja.md  how_to_build_win.md  how_to_build_win_ja.md
src/: advanced_color_selector.cpp  color_wheel.cpp  swatch.cpp
stuff/config/: current.txt
stuff/doc/: particlesFx.html
stuff/doc/LICENSE/: LICENSE.txt  LICENSE_opencv.txt  LICENSE_tahoma2d.txt  notice_about_modified_qt.txt
toonz/cmake/: BundleInfo.plist.in
toonz/sources/: CMakeLists.txt
toonz/sources/Qt-Color-Widgets/: CMakeLists.txt
toonz/sources/colorfx/: CMakeLists.txt  strokestyles.cpp
toonz/sources/common/: tproperty.cpp  tstringid.cpp  tvariant.cpp  tvectorrenderer.cpp
toonz/sources/image/: CMakeLists.txt  tiio.cpp
toonz/sources/include/: movsettings.h  orientation.h  tassistantsimage.h  tconstwrapper.h  tenv.h  tfarmcontroller.h  tfilepath.h  tfiletype.h  tgeometry.h  tgl.h  timage.h  tmetaimage.h  (+9 more)
toonz/sources/xdg-data/: CMakeLists.txt  io.github.OpenToonz.appdata.xml  io.github.OpenToonz_OTX.appdata.xml  io.github.OpenToonz_OTX.desktop
(+505 files in other folders)
