install(FILES io.github.OpenToonz_OTX.appdata.xml DESTINATION ${CMAKE_INSTALL_PREFIX}/share/metainfo)
install(FILES io.github.OpenToonz_OTX.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/applications)
install(FILES io.github.OpenToonz_OTX.png DESTINATION ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/256x256/apps)
